--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  ferry: ^0.10.1-0.1.nullsafety.0
+  ferry: ^0.10.1-0.1.nullsafety
   uuid: ^3.0.2
 
 dev_dependencies:
